--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a {
     <header>
         <h1>Security In Computing Practicals</h1>
         <!-- Download Button -->
-        <a href="SIC Manual.pdf" download="SecurityPracticals.pdf">
+        <a href="SIC Manual.pdf" download="SIC Manual.pdf">
             <button class="download-btn">Download PDF</button>
         </a>
     </header>
