--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
     margin: 1rem 0; /* Spacing from header content */
 }
 
+.download-btn1 {
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    background-color: #09a8eb; /* Red color to distinguish from Read More */
+    color: white;
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    margin: 1rem 0; /* Spacing from header content */
+}
+
 .download-btn:hover {
     background-color: #c0392b; /* Darker red on hover */
     transform: scale(1.05);
@@ -43,8 +58,12 @@ a {
     <header>
         <h1>Security In Computing Practicals</h1>
         <!-- Download Button -->
-        <a href="SIC Manual.pdf" download="SIC Manual.pdf">
+        <a href="SIC Manual.pdf" download="SecurityPracticals.pdf">
             <button class="download-btn">Download PDF</button>
+        </a>
+        <h1>lelo pdf</h1>
+        <a href="1-IS Practical (USIT6P2) with answer.pdf" download="1-IS Practical (USIT6P2) with answer.pdf">
+            <button class="download-btn1">Download PDF</button>
         </a>
     </header>
    
